[tool.poetry]
name = "test456"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitstring = "^4.0.1"
fastapi = "^0.89.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
hypothesis = "^6.65.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
