[tool.poetry]
name = "test456"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitstring = "^4.0.1"
fastapi = "^0.91.0"
trio = "^0.22.0"
hypercorn = "^0.14.3"
pydantic = "^1.10.4"
pyyaml = "^6.0"
httpx = "^0.23.3"
pymodbus = "^3.1.2"
reddish = "^0.4.0"
confluent-kafka = "^2.0.2"
trio-util = "^0.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
hypothesis = "^6.67.1"
pytest = "^7.2.1"
pytest-docker = "^1.0.1"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
